# mrms

./: README.md  pyproject.toml  requirements.txt
mrms/: MRMS_latlon.npz  __init__.py  core.py
tests/: core_test.py  requirements.txt
